WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253353
Safari doesn't translate iframe content
https://bugs.webkit.org/show_bug.cgi?id=253353
Summary
Safari doesn't translate iframe content
Ryosuke Niwa
Reported
2023-03-03 15:57:55 PST
We should be translating contents in iframes. <
rdar://59693219
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-03-03 16:19:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11040
EWS
Comment 2
2023-03-14 20:19:28 PDT
Committed
261671@main
(09c4983c5bd9): <
https://commits.webkit.org/261671@main
> Reviewed commits have been landed. Closing PR #11040 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug