Source/WebCore/editing/TextManipulationItem.h
@@ -24,12 +24,17 @@
  */
 
 #pragma once
+
+#include "FrameIdentifier.h"
 #include "TextManipulationItemIdentifier.h"
 #include "TextManipulationToken.h"
 
 namespace WebCore {
 
 struct TextManipulationItem {
+    FrameIdentifier frameID;
+    bool isSubframe { false };
+    bool isCrossSiteSubframe { false };
     TextManipulationItemIdentifier identifier;
     Vector<TextManipulationToken> tokens;
 };
